--- a/.gitignore
+++ b/.gitignore
@@ -32,5 +32,5 @@ resource-management/model-ml/venv/
 
 # Date mari (nu le urca în git)
 archive/
-resource-management/model-ml/data/*.csv
-resource-management/model-ml/no_show_model.pkl
+model-ml/data/*.csv
+model-ml/no_show_model.pkl
